--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
+                <h3 class="project-title">Skan Hous V.2 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
                 <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou espaços para deixar a família e seus convidados a vontade. </p>
               </div>
             </div>
