--- a/itu.html
+++ b/itu.html
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="project-carousel owl-carousel">
 
           <!-- Project Carousel Item 1 -->
-          <a href="#project1" class="project-item item-shadow popup-with-zoom-anim building">
+          <a href="https://skanhous.com.br/itu" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
           
           <!-- Project Carousel Item 2 -->
-          <a href="#project2" class="project-item item-shadow popup-with-zoom-anim building">
+          <a href="https://skanhous.com.br/fpoles" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
@@ -431,11 +431,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
           
           <!-- Project Carousel Item 3 -->
-          <a href="#project3" class="project-item item-shadow popup-with-zoom-anim building">
+          <a href="https://skanhous.com.br/v2" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
+                <h3 class="project-title">Skan Hous V.2 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
                 <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou espaços para deixar a família e seus convidados a vontade. </p>
               </div>
             </div>
