--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="/itu.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="itu.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -441,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="/fpoles.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="fpoles.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -586,7 +586,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600; ">
-                  <a href="/v2.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="v2.html" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
