--- a/index.html
+++ b/index.html
@@ -706,19 +706,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
           
           <!-- Project Carousel Item 3 -->
-          <a href="#project3" class="project-item item-shadow popup-with-zoom-anim building">
+          <a href="v2.html" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-<<<<<<< HEAD
-<<<<<<< HEAD
                 <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>Alessandra Pretti</h3>
-=======
-                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
->>>>>>> parent of 2af4866 (Update index.html)
-=======
-                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
->>>>>>> parent of 2af4866 (Update index.html)
                 <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou espaços para deixar a família e seus convidados a vontade. </p>
               </div>
             </div>
