--- a/v2.html
+++ b/v2.html
@@ -339,7 +339,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="project-carousel owl-carousel">
 
           <!-- Project Carousel Item 1 -->
-          <a href="https://skanhous.com.br/itu" class="project-item item-shadow">
+          <a href="itu.html" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
@@ -351,7 +351,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
           
           <!-- Project Carousel Item 2 -->
-          <a href="https://skanhous.com.br/fpoles" class="project-item item-shadow">
+          <a href="fpoles.html" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
@@ -363,7 +363,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </a>
           
           <!-- Project Carousel Item 3 -->
-          <a href="https://skanhous.com.br/v2" class="project-item item-shadow">
+          <a href="v2.html" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
