--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+          <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+          <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
+          <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+
         </div>
-        <div class="copy">© Skan Hous 2024. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
+        <div class="copy">© Skan Hous 2025. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
       </div>
     </div>
 
@@ -117,8 +116,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <!-- Social -->
       <div class="social-list hidden-xs">
-        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
-        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+          <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+          <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
+          <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
       </div>
 
       <!-- Spacer -->
@@ -792,10 +792,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="project-detail-meta">
         <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
         <div class="social-list pull-sm-right">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-instagram"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
+          <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+          <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
+          <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         </div>
       </div>
     </div>
