--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
           <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
           <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+          <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
 
         </div>
         <div class="copy">© Skan Hous 2025. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
@@ -119,6 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
           <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
           <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+          <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
       </div>
 
       <!-- Spacer -->
@@ -795,6 +797,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
           <a href="https://www.facebook.com/skanhous/" class="icon ion-social-facebook"></a>
           <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+          <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
         </div>
       </div>
     </div>
